[package]
name = "rust-hw-intro"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
embedded-hal = "0.2.7"
nb = "0.1.2"

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["rt", "stm32f103", "medium"]

[[bin]]
name = "rust-hw-intro"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true
